--- a/nikodemgabler.com/index.html
+++ b/nikodemgabler.com/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="style2.css">
 
+    <script src="myscript.js"></script>
     <title>Nikodem Gabler - Junior SEO Specialist</title>
 </head>
 <body>
@@ -15,8 +16,8 @@
         <a href="#" class="mobile-logo"><img src="images/logo-mobile.png" alt="zdjecie-nikodem-gabler-mobile-logo"></a>
 
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">O mnie</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="o-mnie.html">O mnie</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Kontakt</a></li>
             <li><a href="#">Blog</a></li>
@@ -31,9 +32,10 @@
 <section class="main-section">
     <!-- <div class="square"></div> -->
     <h1>Cześć,<br> tu Nikodem!<br><br><strong>Kandydat na stanowisko Junior SEO Specialist</strong></h1>
+    <div class="arrow-up"></div>
+
+    <div class="my-photo"><img src="images/Nikodem-Gabler-zdjecie.png"></div>
 </section>
-
-
 
 
 
@@ -47,5 +49,7 @@
         burgerIcon.classList.toggle('active');
     })
 </script>
+
+
 </body>
 </html>
