next added variables

--- a/nikodemgabler.com/index.html
+++ b/nikodemgabler.com/index.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="o-mnie.html">O mnie</a></li>
             <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Kontakt</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
             <li><a href="#">Blog</a></li>
         </ul>
 
@@ -29,12 +29,13 @@
         </button>
 </nav>
 
+<div class="my-photo"></div>
+
 <section class="main-section">
-    <!-- <div class="square"></div> -->
     <h1>Cześć,<br> tu Nikodem!<br><br><strong>Kandydat na stanowisko Junior SEO Specialist</strong></h1>
     <div class="arrow-up"></div>
 
-    <div class="my-photo"><img src="images/Nikodem-Gabler-zdjecie.png"></div>
+    
 </section>
 
 
