--- a/nikodemgabler.com/blog.html
+++ b/nikodemgabler.com/blog.html
@@ -12,21 +12,22 @@
 </head>
 <body>
 
-    <nav class="main-nav">
-        <a href="#" class="mobile-logo"><img src="images/logo-mobile.png" alt="zdjecie-nikodem-gabler-mobile-logo"></a>
+<nav class="main-nav">
+    <a href="#" class="mobile-logo"><img src="images/logo-mobile.png" alt="zdjecie-nikodem-gabler-mobile-logo"></a>
 
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="o-mnie.html">O mnie</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Kontakt</a></li>
-            <li><a href="blog.html">Blog</a></li>
-        </ul>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="o-mnie.html">O mnie</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="blog.html">Blog</a></li>
+    </ul>
+        
+    <button class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+    </button>
 
-        <button class="burger">
-            <div class="line"></div>
-            <div class="line"></div>
-        </button>
 </nav>
 
 
