--- a/nikodemgabler.com/blog.html
+++ b/nikodemgabler.com/blog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style2.css">
     <link rel="stylesheet" type="text/css" href="blog.css">
     
 
@@ -37,17 +38,19 @@
     <h1>Blog</h1>
 
     <article class="first-blog-article">
-        <a href="#" class="image-link"><img src="images/blog-photo1.jpeg" alt="Blog - miniaturka1"></a>
-        <h2><a href="#">Lorem ipsum dolor, sit amet</a></h2>
-        <h3><a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni repellendus illum magnam sit. Assumenda obcaecati natus a consequatur expedita id animi. Quod magni, unde distinctio repudiandae fugit dolorum delectus reiciendis.</a></h3>
+        <a href="blog-article3.html" class="image-link"><img src="images/Dlaczego-warto-wspolpracowac-z-agencja-marketingowa.png" alt="Blog - miniaturka1">
+        </a>
+        <h2><a href="blog-article3.html">Agencja marketingowa - Czy warto podejmować współpracę?</a></h2>
+        <h3><a href="blog-article3.html">Decyzja odnośnie podjęcia współpracy z agencją marketingową, z pewnością nie należy do najłatwiejszych. Często towarzyszy nam przekonanie, że po co mamy wydawać pieniądze na agencję skoro możemy coś zrobić sami. Oczywiście jeżeli poświęcimy odpowiednio dużo czasu i zapoznamy się z zasadami marketingu internetowego, będziemy mogli chociażby napisać artykuł pod SEO czy ustawić kampanię PPC. Mimo wszystko bardzo dużo przedsiębiorstw zleca te zadania agencjom. Dlaczego tak się dzieje?<br>
+        <b>KLIKNIJ W TEN ARTYKUŁ, A DOWIESZ SIĘ <strong>DLACZEGO WARTO PODJĄĆ WSPÓŁPRACĘ Z AGENCJĄ MARKETINGOWĄ.</strong></b></a></h3>
     </article>
     <article class="second-blog-article">
-        <a href="#" class="image-link"><img src="images/blog-photo1.jpeg" alt="Blog - miniaturka1"></a>
+        <a href="#" class="image-link"><img src="images/Artykul2.png" alt="Blog - miniaturka1"></a>
         <h2><a href="#">Lorem ipsum dolor, sit amet</a></h2>
         <h3><a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni repellendus illum magnam sit. Assumenda obcaecati natus a consequatur expedita id animi. Quod magni, unde distinctio repudiandae fugit dolorum delectus reiciendis.</a></h3>
     </article>
     <article class="third-blog-article">
-        <a href="#" class="image-link"><img src="images/blog-photo1.jpeg" alt="Blog - miniaturka1"></a>
+        <a href="#" class="image-link"><img src="images/Artykul1.png" alt="Blog - miniaturka1"></a>
         <h2><a href="#">Lorem ipsum dolor, sit amet</a></h2>
         <h3><a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni repellendus illum magnam sit. Assumenda obcaecati natus a consequatur expedita id animi. Quod magni, unde distinctio repudiandae fugit dolorum delectus reiciendis.</a></h3>
     </article>
