--- a/nikodemgabler.com/index.html
+++ b/nikodemgabler.com/index.html
@@ -18,9 +18,9 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="o-mnie.html">O mnie</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Kontakt</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
         </ul>
 
         <button class="burger">
