--- a/nikodemgabler.com/blog.html
+++ b/nikodemgabler.com/blog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="style2.css">
-    <link rel="stylesheet" type="text/css" href="blog.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style2.css">
+    <link rel="stylesheet" type="text/css" href="styles/blog.css">
     
 
     <title>Nikodem Gabler - Junior SEO Specialist</title>
@@ -18,7 +18,7 @@
 
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="o-mnie.html">O mnie</a></li>
+        <li><a href="aboutme.html">O mnie</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Kontakt</a></li>
         <li><a href="blog.html">Blog</a></li>
@@ -34,18 +34,19 @@
 
 
 <section class="main-section-blog">
+    <header>
+        <h1>Blog</h1>
+    </header>
     
-    <h1>Blog</h1>
-
     <article class="first-blog-article">
-        <a href="blog-article3.html" class="image-link"><img src="images/Dlaczego-warto-wspolpracowac-z-agencja-marketingowa.png" alt="Blog - miniaturka1">
+        <a href="blog-article3.html" class="image-link"><img src="images/wspolpraca-z-agencja-marketingowa.png" alt="Blog - miniaturka3">
         </a>
         <h2><a href="blog-article3.html">Agencja marketingowa - Czy warto podejmować współpracę?</a></h2>
         <h3><a href="blog-article3.html">Decyzja odnośnie podjęcia współpracy z agencją marketingową, z pewnością nie należy do najłatwiejszych. Często towarzyszy nam przekonanie, że po co mamy wydawać pieniądze na agencję skoro możemy coś zrobić sami. Oczywiście jeżeli poświęcimy odpowiednio dużo czasu i zapoznamy się z zasadami marketingu internetowego, będziemy mogli chociażby napisać artykuł pod SEO czy ustawić kampanię PPC. Mimo wszystko bardzo dużo przedsiębiorstw zleca te zadania agencjom. Dlaczego tak się dzieje?<br>
         <b>KLIKNIJ W TEN ARTYKUŁ, A DOWIESZ SIĘ <strong>DLACZEGO WARTO PODJĄĆ WSPÓŁPRACĘ Z AGENCJĄ MARKETINGOWĄ.</strong></b></a></h3>
     </article>
     <article class="second-blog-article">
-        <a href="#" class="image-link"><img src="images/Artykul2.png" alt="Blog - miniaturka1"></a>
+        <a href="#" class="image-link"><img src="images/Artykul2.png" alt="Blog - miniaturka2"></a>
         <h2><a href="#">Lorem ipsum dolor, sit amet</a></h2>
         <h3><a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni repellendus illum magnam sit. Assumenda obcaecati natus a consequatur expedita id animi. Quod magni, unde distinctio repudiandae fugit dolorum delectus reiciendis.</a></h3>
     </article>
