--- a/nikodemgabler.com/contact.html
+++ b/nikodemgabler.com/contact.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="contact.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style2.css">
+    <link rel="stylesheet" type="text/css" href="styles/contact.css">
 
     <script src="myscript.js"></script>
     <title>Nikodem Gabler - Junior SEO Specialist</title>
@@ -17,7 +18,7 @@
 
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="o-mnie.html">O mnie</a></li>
+            <li><a href="aboutme.html">O mnie</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
             <li><a href="blog.html">Blog</a></li>
@@ -30,9 +31,9 @@
 </nav>
 
 <section class="main-section-contact">
-    
+    <header>
     <h1>Kontakt</h1>
-
+    </header>
     <div class="icons-container">
         <a href="#"><img src="images/linkedin-icon.svg" alt="linkedin-icon" class="linkedin-icon"/></a><h2 class="h2-2"><a href="https://www.linkedin.com/in/nikodem-gabler/" target="_blank" class="scm-link">linkedin.com/nikodem-gabler</a></h2>
         <a href="#"><img src="images/github-icon.svg" alt="github-icon" class="github-icon"/></a> <h2 class="h2-1"><a href="https://github.com/nikodemgabler" target="_blank" class="scm-link">github.com/nikodemgabler</a></h2>
